--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>1fbaf1de-5161-4333-bfc5-f91a93c6626d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
